<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2012 Artur Dryomov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

	<string name="application_name" translatable="false">Gambit</string>

	<string name="title_cards">Flashcards</string>
	<string name="title_licenses">Open source licenses</string>
	<string name="title_backup">Backup</string>

	<string name="empty_cards_title">No flashcards</string>
	<string name="empty_cards_subtitle">Try to create some</string>
	<string name="empty_decks_title">No decks</string>
	<string name="empty_decks_subtitle">Try to create some</string>

	<string name="button_create_cards">Create some</string>
	<string name="button_export">Export</string>
	<string name="button_import">Import</string>

	<string name="error_deck_already_exists">Deck with such name already exists.</string>
	<string name="error_empty_field">Should not be empty.</string>

	<string name="hint_card_back_text">Back side text</string>
	<string name="hint_card_front_text">Front side text</string>
	<string name="hint_deck_name">Deck name</string>

	<string name="menu_backup">Backup</string>
	<string name="menu_cancel">Cancel</string>
	<string name="menu_create_card">Create flashcard</string>
	<string name="menu_create_deck">Create deck</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_edit_cards">Edit flashcards</string>
	<string name="menu_flip">Flip</string>
	<string name="menu_licenses">Open source licenses</string>
	<string name="menu_rate_application">Rate the application</string>
	<string name="menu_replay">Replay</string>
	<string name="menu_save">Save</string>
	<string name="menu_send_feedback">Send feedback</string>
	<string name="menu_shuffle_disable">Disable shuffle</string>
	<string name="menu_shuffle_enable">Enable shuffle</string>

	<string name="message_backup">You can easily backup your decks and cards to Google Drive.</string>

	<string name="name_backup">Gambit Backup</string>

	<string name="mask_card_list_item" translatable="false">%1$s → %2$s</string>

</resources>
