<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2012 Artur Dryomov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:auto="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_replay"
		android:icon="@drawable/ic_action_replay"
		android:title="@string/menu_replay"
		auto:showAsAction="always"/>

	<item
		android:id="@+id/menu_shuffle"
		android:icon="@drawable/ic_action_shuffle"
		android:title="@string/menu_shuffle_enable"
		auto:showAsAction="always"/>

	<item
		android:id="@+id/menu_flip"
		android:icon="@drawable/ic_action_flip"
		android:title="@string/menu_flip"
		auto:showAsAction="always"/>

</menu>
