<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2012 Artur Dryomov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:gravity="center"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:src="@drawable/ic_google_drive"
		android:layout_width="@dimen/size_logo_google_drive"
		android:layout_height="@dimen/size_logo_google_drive"/>

	<TextView
		android:text="@string/message_backup"
		android:gravity="center"
		android:paddingTop="@dimen/padding_backup_message_vertical"
		android:paddingBottom="@dimen/padding_backup_message_vertical"
		android:paddingLeft="@dimen/padding_backup_message_horizontal"
		android:paddingRight="@dimen/padding_backup_message_horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<Button
		android:text="@string/button_export"
		android:textAllCaps="true"
		android:textColor="@android:color/white"
		android:textSize="@dimen/text_small"
		android:textStyle="bold"
		android:background="@drawable/bg_button"
		android:paddingRight="@dimen/padding_button"
		android:paddingLeft="@dimen/padding_button"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/height_button"/>

	<Button
		android:text="@string/button_import"
		android:textAllCaps="true"
		android:textColor="@android:color/white"
		android:textSize="@dimen/text_small"
		android:textStyle="bold"
		android:background="@drawable/bg_button"
		android:layout_marginTop="@dimen/margin_button"
		android:paddingRight="@dimen/padding_button"
		android:paddingLeft="@dimen/padding_button"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/height_button"/>

</LinearLayout>